--- a/Restructured Document/main.tex
+++ b/Restructured Document/main.tex
@@ -18,6 +18,16 @@
 \fancyfoot[LE,RO]{\thepage}
 \fancyfoot[LO,CE]{Chapter \thechapter}
 \fancyfoot[CO,RE]{Author Name}
+\usepackage{hyperref}
+    \hypersetup{
+        colorlinks=true,
+        linkcolor=blue,
+        filecolor=magenta,      
+        urlcolor=cyan,
+    }
+\usepackage{float}
+\usepackage{lstautogobble}
+\usepackage{tabularx}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 
@@ -53,8 +63,8 @@ I want to thank...
 \chapter{Chapter Two Title}
 \input{chapters/chapter02}
 
-\chapter{Chapter Three Title}
-\input{chapters/chapter03}
+\chapter{BeagleBone Black with Heavy Vehicle Truck Cape}
+\input{chapters/beagleboneblack_truckcape_v4.tex}
 
 \chapter{Introduction}
 \input{chapters/conclusion}
