--- a/Restructured Document/main.tex
+++ b/Restructured Document/main.tex
@@ -24,7 +24,7 @@
 \title{
 	{Thesis Title}\\
 	{\large Institution Name}\\
-	{\includegraphics[width=2in]{universitylogo.png}}
+	{\includegraphics[width=2in]{chapter01/universitylogo.png}}
 }
 
 \author{Author Name}
@@ -34,7 +34,7 @@
 
 \maketitle
 \chapter*{Abstract}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus nunc eu neque interdum placerat. Suspendisse vestibulum hendrerit vehicula. Etiam blandit eleifend pellentesque. Morbi in risus nec mi ultrices vehicula. Praesent porta dui non magna porttitor, et placerat arcu varius. Suspendisse a ullamcorper lectus, a porta mauris. Nulla et luctus mauris. 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus nunc eu neque interdum placerat. Suspendisse vestibulum hendrerit vehicula. Etiam blandit eleifend pellentesque. Morbi in risus nec mi ultrices vehicula. Praesent porta dui non magna porttitor, et placerat arcu varius. Suspendisse a ullamcorper lectus, a porta mauris. Nulla et luctus mauris. Salve.
 
 \chapter*{Declaration}
 I do hereby declare...
