Included custom settings for listings environment in document preabmble.
Included custom settings for listings environment including: background color, line width, keyword coloring, line number style, breaklines, etc. This has been moved to document preamble.

--- a/Restructured Document/main.tex
+++ b/Restructured Document/main.tex
@@ -5,31 +5,10 @@
 % Preamble
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[11pt,twoside]{report}
-\usepackage[utf8]{inputenc}
-\usepackage[]{graphicx}
-\graphicspath{{images/}}
-\usepackage[]{geometry}
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhead{}
-\fancyhead[RO,LE]{Thesis Title}
-\fancyfoot{}
-\fancyfoot[LE,RO]{\thepage}
-\fancyfoot[LO,CE]{Chapter \thechapter}
-\fancyfoot[CO,RE]{Author Name}
-\usepackage{hyperref}
-    \hypersetup{
-        colorlinks=true,
-        linkcolor=blue,
-        filecolor=magenta,      
-        urlcolor=cyan,
-    }
-\usepackage{float}
-\usepackage{lstautogobble}
-\usepackage{tabularx}
-\renewcommand{\headrulewidth}{0.4pt}
-\renewcommand{\footrulewidth}{0.4pt}
+\input{preamble.tex}
+
+% Frontmatter
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{
 	{Thesis Title}\\
