--- a/Restructured Document/preamble.tex
+++ b/Restructured Document/preamble.tex
@@ -11,8 +11,28 @@
 \fancyfoot[LE,RO]{\thepage}
 \fancyfoot[LO,CE]{Chapter \thechapter}
 \fancyfoot[CO,RE]{Author Name}
+\usepackage{hyperref}
+    \hypersetup{
+        colorlinks=true,
+        linkcolor=blue,
+        filecolor=magenta,      
+        urlcolor=cyan,
+    }
+\usepackage{float}
+\usepackage{lstautogobble}
+\usepackage{tabularx}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
+
+
+\usepackage{xcolor} %Allows color options for various packages
+%Custom Colors
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codelightgray}{rgb}{0.65,0.65,0.65}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.95}
+\definecolor{codeorange}{rgb}{0.32,0.93,0.68}
 
 \usepackage{listings} %Allows code to be shown properly
 %New code style
