Lyx to Latex coversion complete
minor wording and tonal changes. Still missing sections.

--- a/Restructured Document/main.tex
+++ b/Restructured Document/main.tex
@@ -45,6 +45,9 @@ I want to thank...
 \chapter{BeagleBone Black with Heavy Vehicle Truck Cape}
 \input{chapters/beagleboneblack_truckcape_v4.tex}
 
+\chapter{Computer Programming Fundamentals}
+\input{chapters/computer_programming_fundamentals}
+
 \chapter{Introduction}
 \input{chapters/conclusion}
 
