Cybersecurity Chapter converted
Very short, looks like he didn't get very far.

--- a/Restructured Document/main.tex
+++ b/Restructured Document/main.tex
@@ -41,6 +41,9 @@ I want to thank...
 
 \chapter{Chapter Two Title}
 \input{chapters/chapter02}
+{}
+\chapter{Principles of Cybersecurity}
+\input{chapters/CybersecurityChapter}
 
 \chapter{BeagleBone Black with Heavy Vehicle Truck Cape}
 \input{chapters/beagleboneblack_truckcape_v4.tex}
