--- a/Restructured Document/main.tex
+++ b/Restructured Document/main.tex
@@ -45,6 +45,9 @@ I want to thank...
 \chapter{BeagleBone Black with Heavy Vehicle Truck Cape}
 \input{chapters/beagleboneblack_truckcape_v4.tex}
 
+\chapter{SAE J1939}
+\input{chapters/J1939Chapter.tex}
+
 \chapter{Introduction}
 \input{chapters/conclusion}
 
