Added chapter to main.tex
Subject

--- a/Restructured Document/main.tex
+++ b/Restructured Document/main.tex
@@ -48,6 +48,9 @@ I want to thank...
 \chapter{BeagleBone Black with Heavy Vehicle Truck Cape}
 \input{chapters/beagleboneblack_truckcape_v4.tex}
 
+\chapter{LaTeX Typesetting}
+\input{chapters/LaTeXChapter.tex}
+
 \chapter{Introduction}
 \input{chapters/conclusion}
 
